--- a/frontEnd/src/app/article-detail/article-detail.component.scss
+++ b/frontEnd/src/app/article-detail/article-detail.component.scss
@@ -91,6 +91,9 @@
           width: 100% !important;
         }
       }
+      .tag-container {
+        margin-top: 40px;
+      }
     }
     .related-articles {
       .related-article-row {
