--- a/frontEnd/src/app/landing/landing.component.scss
+++ b/frontEnd/src/app/landing/landing.component.scss
@@ -13,53 +13,6 @@
 
   md-grid-tile {
     background: lightblue;
-    // .header-1 {
-    //   .flex-col-end {
-    //     flex: 1;
-    //   }
-    // }
-    // .header-2 {
-    //   .flex-col-start {
-    //     flex: 1;
-    //   }
-    // }
-    // .header-1,
-    // .header-2 {
-    //   flex-direction: row;
-    //   .content {
-    //     flex: 1;
-    //     color: black;
-    //   }
-    //   .content {
-    //     background: white;
-    //     font-size: 20px;
-    //     height: 100%;
-    //     text-align: center;
-    //     padding: 0;
-    //     display: flex;
-    //     flex-direction: column;
-    //     justify-content: center;
-    //     align-items: center;
-    //     position: relative;
-    //     .body-info-container {
-    //       color: black;
-    //       position: absolute;
-    //       left: 30px;
-    //       right: 30px;
-    //       bottom: 30px;
-    //       align-items: center;
-    //       .info {
-    //         margin-right: 10px;
-    //       }
-    //       .info-category {
-    //         margin: 0;
-    //       }
-    //     }
-    //     .title {
-    //       margin: 0 30px;
-    //     }
-    //   }
-    // }
   }
 }
 
@@ -134,7 +87,7 @@
 
 
 .headline-title {
-  margin: 100px 200px 0 100px;
+  margin: 50px 100px 0 50px;
   .active {
     font-size: 30px;
     color: mat-color($primary);
@@ -148,7 +101,7 @@
     padding-left: 40px;
     border-bottom: 2px solid #dfdfdf;
     margin: 0 -5px;
-    text-transform: capitalize;
+    text-transform: uppercase;
   }
 }
 @media screen and (max-width: 400px) {
