adjust response on posting article with no tag

--- a/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
+++ b/frontEnd/src/app/articles-list/article-editor/article-editor.component.html
@@ -29,7 +29,7 @@
         </md-option>
       </md-select>
 
-      <tag-input [(ngModel)]="articleDetail.tags" [onlyFromAutocomplete]="true" name="tags" [secondaryPlaceholder]="'Select tags for article'"
+      <tag-input [(ngModel)]="articleDetail.tags" [onlyFromAutocomplete]="false" name="tags" [secondaryPlaceholder]="'Select tags for article'"
         [displayBy]="'name'">
         <tag-input-dropdown [showDropdownIfEmpty]="true" [autocompleteItems]="articleTags" [displayBy]="'name'" [identifyBy]="'_id'">
         </tag-input-dropdown>
