--- a/frontEnd/src/app/landing/category-timeline/category-timeline.component.html
+++ b/frontEnd/src/app/landing/category-timeline/category-timeline.component.html
@@ -17,7 +17,7 @@
                 <span class="time">{{article.date | date: 'mediumTime'}}</span> 
                 <span class="author">{{article.author || 'Mercury Crew'}}</span>
                 <span class="view-count"><md-icon>pageview</md-icon>{{article.visit_count || 0}}</span>
-                <span class="view-count"><md-icon>mode_comment</md-icon>{{totalComments || 0}}</span>
+                <span class="view-count"><md-icon>mode_comment</md-icon>{{article.comment_count || 0}}</span>
               </md-card-subtitle>
               <md-card-title>{{article.title}}</md-card-title>
               <md-card-subtitle>{{article.description}}</md-card-subtitle>
